--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Audio Streaming Test</title>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </head>
 <body>
@@ -25,6 +25,7 @@
         <audio controls id="audioPlayer">
             Your browser does not support the audio element.
         </audio>
+        <!-- <p style="position: relative;height: max-content; color:azure;" >BETA access closed</p> -->
     </div>
     <script type="module" src="main.js"></script>
 
