--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script >
         if(localStorage.getItem("id") == null){
             alert("You are not logged in");
-            window.location.href = "/login.html";
+            window.location.href = "./login.html";
         }
     </script>
     <script type="module" src="main.js"></script>
